--- a/sawtooth_gen_fpga.qsf
+++ b/sawtooth_gen_fpga.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Stratix IV"
 set_global_assignment -name DEVICE EP4SGX230KF40C2
-set_global_assignment -name TOP_LEVEL_ENTITY sawtooth_gen_fpga
+set_global_assignment -name TOP_LEVEL_ENTITY sawtooth_gen
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "09:11:40  FEBRUARY 26, 2020"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Standard Edition"
@@ -46,3 +46,37 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name VERILOG_FILE sawtooth_gen.v
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
+set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_global_assignment -name QIP_FILE my_pll.qip
+set_location_assignment PIN_V9 -to dac_in[0]
+set_location_assignment PIN_V10 -to dac_in[1]
+set_location_assignment PIN_T9 -to dac_in[2]
+set_location_assignment PIN_U10 -to dac_in[3]
+set_location_assignment PIN_R8 -to dac_in[4]
+set_location_assignment PIN_R9 -to dac_in[5]
+set_location_assignment PIN_P8 -to dac_in[6]
+set_location_assignment PIN_N9 -to dac_in[7]
+set_location_assignment PIN_L11 -to dac_in[8]
+set_location_assignment PIN_M11 -to dac_in[9]
+set_location_assignment PIN_M7 -to dac_in[10]
+set_location_assignment PIN_M8 -to dac_in[11]
+set_location_assignment PIN_L10 -to dac_in[12]
+set_location_assignment PIN_M10 -to dac_in[13]
+set_location_assignment PIN_AB6 -to i_clk
+set_instance_assignment -name IO_STANDARD LVDS -to i_clk_to_dac
+set_location_assignment PIN_K8 -to i_clk_to_dac
+set_location_assignment PIN_J8 -to "i_clk_to_dac(n)"
+set_location_assignment PIN_J7 -to sw[0]
+set_location_assignment PIN_K7 -to sw[1]
+set_location_assignment PIN_AK6 -to sw[2]
+set_location_assignment PIN_L7 -to sw[3]
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
